# calculadora-basica

./: README.md  main.py  pyproject.toml  requirements.txt
src/: api.py  calculator.py  models.py
tests/: conftest.py  test_api.py  test_calculator.py  test_models.py
